personalized education system ver17

--- a/home/templates/home/account.html
+++ b/home/templates/home/account.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block title %}Thông tin tài khoản{% endblock %}
+{% block title %}{% trans "Account information" %}{% endblock %}
 
 {% block style %}
 <style>
