--- a/home/templates/home/help.html
+++ b/home/templates/home/help.html
@@ -110,7 +110,7 @@
   <div class="card">
     <h2>📖 {% trans "Help center" %}</h2>
     <p class="sub">
-      Tại đây bạn có thể tìm thấy hướng dẫn sử dụng hệ thống và các cách liên hệ để được hỗ trợ.
+      {% trans "Here you can find system user manuals and ways to contact for support." %}
     </p>
     <ul>
       <li>❓ {% trans "Frequently asked questions" %}</li>
